# ai4oselab1

./: .gitignore  Cargo.toml  README.md
Docs/: README.md  diary.md  plan-2.11-16.md
Docs/Rcore_phase2/: ch3.md  ch4.md
Journals/: README.md
Journals/ai-chats/: 2026-02-10.md  2026-02-11.md  TEMPLATE.md
Journals/weekly/: 2026-W06.md  TEMPLATE.md
Work/: README.md  tmp_customizable_buddy_lib.rs
Work/crates/tg-syscall/src/: user.rs
Work/crates/tg-syscall/src/kernel/: mod.rs
Work/os/: Cargo.toml  README.md
Work/os/.cargo/: config.toml
Work/os/ch1/: Cargo.toml
Work/os/ch2/: Cargo.toml  README.md
Work/os/ch3/: Cargo.toml
Work/os/ch3/src/: main.rs  task.rs
Work/os/ch4/: Cargo.toml
Work/os/ch4/src/: main.rs  process.rs
Work/os/ch5/: Cargo.toml  README.md  build.rs
Work/os/ch5/src/: main.rs  process.rs  processor.rs
src/: content.txt  main.rs
