[package]
name = "ch4"
description = "Chapter 4 of rCore Tutorial: Address space management with SV39 virtual memory."
version = "0.3.1-preview.3"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>","Yifan Wang<w-yf22@mails.tsinghua.edu.cn>","Yu Chen <yuchen@tsinghua.edu.cn>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace/tree/test"
documentation = "https://docs.rs/tg-ch4"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "virtual-memory"]
categories = ["no-std", "embedded"]
exclude = [
    "tg-user/**",
#    ".cargo/config.toml",
]

[features]
exercise = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
xmas-elf = { workspace = true }
riscv = { workspace = true }

tg-sbi = { workspace = true, features = ["nobios"] }
tg-linker = { workspace = true }
tg-console = { workspace = true }
tg-kernel-context = { workspace = true, features = ["foreign"] }
tg-kernel-alloc = { workspace = true }
tg-kernel-vm = { workspace = true }
tg-syscall = { workspace = true, features = ["kernel"] }

[build-dependencies]
tg-linker = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
